--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   <div class="intro-text">
                         <span class="name">Sunny Gao</span>
                         <hr class="star-light">
-                        <span class="skills">A diligent student, a passionate musician, a dedicated actor, an enthusiastic athlete, a creative artist, and a commited community volunteer,please click on each picture to learn more about me.</span>
+                        <span class="skills">A diligent student, a passionate musician, a dedicated actor, an enthusiastic athlete, a creative artist, and a commited community volunteer, please click on each picture to learn more about me.</span>
                     </div>
                 </div>
             </div>
@@ -761,7 +761,7 @@
                             <ul class="list-inline item-details">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/TToi_sBH2Pk?si=k-rI8gy-BKj2yAJm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 							<li>
-                                    Sunny served as the MC in the her voilin teacher's audition.
+                                    Sunny served as the MC at her voilin teacher's rectial in 2018.
                             </li>
                             </ul>
 							<ul class="list-inline item-details">
