--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
                             </ul>
 							<ul class="list-inline item-details">
                             <img src="images/sunny_mc1.JPG" class="img-responsive img-centered" alt="">
-							<img src="images/sunny_mc2.JPG" class="img-responsive img-centered" alt="">
+							<img src="images/sunny_mc2.JPG" class="img-responsive img-centered" alt="" width="560">
 							<iframe width="560" height="315" src="https://www.youtube.com/embed/UfdWqQUJLQE?si=UKnAyUUM2DUfC01b" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                 <li>
                                     Sunny served as the MC during the Lunar New Year Celebration at school in 2019.
