--- a/index.html
+++ b/index.html
@@ -567,18 +567,18 @@
                             <ul class="list-inline item-details">
                             <img src="images/musical2.jpg" class="img-responsive img-centered" alt="">
 							<li>
-									Sunny is positioned at the 6th right spot in the picture.
+									Sunny is positioned at the 6th right spot in the picture, with hands on her hat.
                             </li>
-							<p>
+							<br>
 							<img src="images/musical1.jpg" class="img-responsive img-centered" alt="">
 							<li>
                                     Sunny is in red dress in the picture.
                             </li>
-							<p>
+							<br>
 							<img src="images/musical3.jpg" class="img-responsive img-centered" alt="">
                                 <li>
                                     <strong>
-                                    Broadway Experience
+                                    Broadway Experience: Hello Dolly!
                                     </strong>
                                     Sunny is positioned at the right spot in the above picture.
                                 </li>
@@ -589,21 +589,17 @@
                             <img src="images/drama3.jpg" class="img-responsive img-centered" alt="">
                                 <li>
                                     <strong>
-                                    Chinese Drama 
+                                    Chinese Drama: 
                                     </strong>
-                                    Sunny is acting sister Panda in the drama "Fight vs. the Virus".
+									Sunny portrayed the character of Sister Panda in the drama "Fight vs. the Virus"
                                 </li>
                             </ul>
                             <ul class="list-inline item-details">
                             <img src="images/DSC_0130.JPG" class="img-responsive img-centered" alt="">
-                            <li>
-                                    Sunny is in red dress in the picture.
-                            </li>
-                            <p>
                             <img src="images/DSC_0148.JPG" class="img-responsive img-centered" alt="">
                                 <li>
                                     <strong>
-                                    Chinese Drama
+                                    Second Musical Experience:
                                     </strong>
                                     Sunny is acting as the little mouse in the musical "Happy Animals".
                                 </li>
