--- a/index.html
+++ b/index.html
@@ -569,12 +569,20 @@
 							<li>
 									Sunny is positioned at the 6th right spot in the picture, with hands on her hat.
                             </li>
+							</ul>
+							<ul class="list-inline item-details">
 							<br>
 							<img src="images/musical1.jpg" class="img-responsive img-centered" alt="">
 							<li>
                                     Sunny is in red dress in the picture.
                             </li>
-							<br>
+							</ul>
+                            <ul class="list-inline item-details">
+                            <img src="images/musical1.jpg" class="img-responsive img-centered" alt="">
+                            <li>
+                                    Sunny is in red dress in the picture.
+                            </li>
+							</ul>
 							<img src="images/musical3.jpg" class="img-responsive img-centered" alt="">
                                 <li>
                                     <strong>
