--- a/index.html
+++ b/index.html
@@ -597,9 +597,9 @@
                             <img src="images/drama3.jpg" class="img-responsive img-centered" alt="">
                                 <li>
                                     <strong>
-                                    Chinese Drama: 
+                                    Chinese Drama:Fight vs. the Virus
                                     </strong>
-									Sunny portrayed the character of Sister Panda in the drama "Fight vs. the Virus"
+									Sunny portrayed the character of Sister Panda.
                                 </li>
                             </ul>
                             <ul class="list-inline item-details">
@@ -607,9 +607,9 @@
                             <img src="images/DSC_0148.JPG" class="img-responsive img-centered" alt="">
                                 <li>
                                     <strong>
-                                    Second Musical Experience:
+                                    Second Musical Experience: Happy Animals
                                     </strong>
-                                    Sunny is acting as the little mouse in the musical "Happy Animals".
+                                    Sunny is acting as the little mouse..
                                 </li>
                             </ul>
                             <p>
