--- a/index.html
+++ b/index.html
@@ -846,9 +846,9 @@
                                 </li>
                             </ul>
 							<hr class="star-primary">
-                            <img src="images/vo11_1.jpg" class="img-responsive img-centered" alt="">
+                            <img src="images/vol1_1.jpg" class="img-responsive img-centered" alt="">
                             <img src="images/vol2.JPG" class="img-responsive img-centered" alt="">
-                            <img src="images/vo14_2.jpg" class="img-responsive img-centered" alt="">
+                            <img src="images/vol4_2.jpg" class="img-responsive img-centered" alt="">
                             <img src="images/vol6.JPG" class="img-responsive img-centered" alt="">
                             <img src="images/vol7.JPG" class="img-responsive img-centered" alt="">
                             <ul class="list-inline item-details">
