--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@
                                 </li>
                             </ul>
 							<hr class="star-primary">
-                            <img src="images/vol1_1.jpg" class="img-responsive img-centered" alt="">
+                            <img src="images/vol1.JPG" class="img-responsive img-centered" alt="">
                             <img src="images/vol2.JPG" class="img-responsive img-centered" alt="">
                             <img src="images/vol4_2.jpg" class="img-responsive img-centered" alt="">
                             <img src="images/vol6.JPG" class="img-responsive img-centered" alt="">
