--- a/index.html
+++ b/index.html
@@ -668,6 +668,13 @@
                                 </li>
                             </ul>
 							<ul class="list-inline item-details">
+                            <img src="images/volleyball2023.JPG" class="img-responsive img-centered" alt="">
+                                <li>
+                                    <strong>8th Grade Volleyball team</strong>
+                                    Sunny is positioned at the second from right spot in the back row in the picture.
+                                </li>
+                            </ul>
+							<ul class="list-inline item-details">
                             <img src="images/volleyball2022.JPG" class="img-responsive img-centered" alt="">
                                 <li>
                                     <strong>7th Grade Volleyball team</strong>
