--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                                     <strong>Apr 2019
                                     </strong>
                                 </li>
-                                <li><strong> Song name </strong> Sunny's first hiphop dance show, she is positioned as the third figure from the right in the thumbnail.
+                                <li> Sunny's first hiphop dance show, she is positioned as the third figure from the right in the thumbnail.
                                 </li>
                             </ul>
 							<iframe width="560" height="315" src="https://www.youtube.com/embed/6JWQr85Xpx0?si=S31g2eVeuveV1Tg0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -530,7 +530,16 @@
                                     <strong>Jun 2019
                                     </strong>
                                 </li>
-                                <li><strong> Little Cavalry (小骑兵) </strong> Sunny made her debut dance performance at Lujianping Dance & Arts, where she portrayed the character of Little Cavalry.
+                                <li><strong> Little Cavalry (小骑兵) </strong> Sunny made her second dance performance at Lujianping Dance & Arts, where she portrayed the character of Little Cavalry.
+                                </li>
+                            </ul>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/DBuQNuFjEjQ?si=dg3wN69BNW-uwlV5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+							<ul class="list-inline item-details">
+                                <li>Date:
+                                    <strong>May 2018
+                                    </strong>
+                                </li>
+                                <li><strong> Words of Spring </strong> Sunny made her debut dance performance at Lujianping Dance & Arts, where she is prominently positioned on the left in the thumbnail.
                                 </li>
                             </ul>
 							<iframe width="560" height="315" src="https://www.youtube.com/embed/NQjcYt9-nEE?si=RaOn7IyyTa6Nq3KD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -539,7 +548,7 @@
                                     <strong>Feb 2017
                                     </strong>
                                 </li>
-                                <li><strong> Song name </strong> Sunny's first Chinese dance, she is at front position in the thumbnail.
+                                <li><strong> Xinjiang Dance </strong> Sunny's first Chinese dance, she is at front position in the thumbnail.
                                 </li>
                             </ul>
 							<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
