--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                                     <strong>Oct 2022
                                     </strong>
                                 </li>
-                                <li><strong> Fisherman's English Song (渔舟唱晚) </strong> This song is since 1930s, the most influential piece spread in China. The music depicts the beautiful scene of the sunset reflecting on vast expanses of blue waves, with fishermen leisurely enjoying themselves and fishing boats gradually drifting away with the tide. This ensemble played by Sunny and her sister Annie. They won the second plance of American Protege International Music Talent Competition Fall 2022 and performed in Carneige Hall summer 2023.
+                                <li><strong> Fisherman's Evening Song (渔舟唱晚) </strong> This piece, since the 1930s, has been the most influential piece in China. The music depicts the beautiful scene of a sunset reflecting on a vast expanse of blue waves, and a fisherman leisurely enjoying himself. As night settles in, the fishing boats on the water gradually drift away with the tide. This piece was played by Sunny and her sister Annie in 2022. Together, they won second plance in American Protege International Music Talent Competition Fall 2022 and performed in Carneige Hall during the summer of 2023.
                                 </li>
                             <style>
 * {
@@ -280,7 +280,7 @@
                                     <strong>Nov 2022
                                     </strong>
                                 </li>
-                                <li><strong> Fisherman's English Song </strong> Sunny and Annie Performed this song in the MTAC Palo Alto Branch Autumn Festival and got excellent score from the judges.
+                                <li><strong> Fisherman's Evening Song </strong> Sunny and Annie Performed this song in the MTAC Palo Alto Branch Autumn Festival and scored excellent from all the judges.
                                 </li>
                             </ul>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/QWjMGn20mNc?si=oIYzPAXbaIjBhEeF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -289,7 +289,7 @@
                                     <strong>Nov 2023
                                     </strong>
                                 </li>
-                                <li><strong> The violin concerto No.4 in G Major </strong> Sunny performed this piece for MTAC Palo Alto Branch Autumn Festival and got excellent score from the judges.
+                                <li><strong> Violin Concerto No.4 in G Major </strong> Sunny performed this piece for MTAC Palo Alto Branch Autumn Festival and scored excellent from the judges.
                                 </li>
                             </ul>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/OaUUYRf6zw4?si=5TKzVkWcCsXruBra" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -298,7 +298,7 @@
                                     <strong>May 2023
                                     </strong>
                                 </li>
-                                <li><strong> Concerto No.1 in A Minor </strong> Sunny performed this piece for MTAC Palo Alto Branch Student Recital.
+                                <li><strong> Violin Concerto No.1 in A Minor </strong> Sunny performed this piece for MTAC Palo Alto Branch Student Recital.
                                 </li>
                             </ul>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/bHIlqR4_68s?si=4wGAcfaWCX17w65y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -307,7 +307,7 @@
                                     <strong>Oct 2023
                                     </strong>
                                 </li>
-                                <li><strong> Beethoven Virus </strong> Sunny performed this piece with her classmates Bryan, Liam, Ted in the Variety show and in two nuring home.
+                                <li><strong> Beethoven Virus </strong> Sunny performed this piece with her classmates Bryan, Liam, Ted in their schools variety show and in two nursing home.
                                 </li>
                             </ul>
 							<iframe width="560" height="315" src="https://www.youtube.com/embed/lmOsfPn9nbo?si=3cq0_p0jdV-LbxI8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -316,7 +316,7 @@
                                     <strong>Apr 2022
                                     </strong>
                                 </li>
-                                <li><strong> Concerto in G Major, Op. 24, 1st Movement </strong> Sunny auditioned for Camilla Kolchinsky Orchestra in GSYO.
+                                <li><strong> Concerto in G Major, Op. 24, 1st Movement </strong> Sunny auditioned for Golden State Youth Orchestra's Camilla Kolchinsky Orchestra.
                                 </li>
                             </ul>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/HpEVUkUPrJA?si=jP-orw73RPaWiqFo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -334,7 +334,7 @@
                                     <strong> 2020-2021
                                     </strong>
                                 </li>
-                                <li><strong> Concerto for Two Violins in D minor </strong> Sunny's recording for fun during covid.
+                                <li><strong> Concerto for Two Violins in D minor </strong> Sunny's recording for fun during COVID19.
                                 </li>
                             </ul> 
 							<iframe width="560" height="315" src="https://www.youtube.com/embed/9xO6ti2r8Sg?si=MQW3jNxj4WPTrMjJ&amp;start=3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -343,7 +343,7 @@
                                     <strong> Feb 2018
                                     </strong>
                                 </li>
-                                <li><strong> Ode to Joy </strong> Sunny's first ensemble.
+                                <li><strong> Ode to Joy </strong> Sunny's first performance with an ensemble.
                                 </li>
                             </ul>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/mMp5CuAc0CM?si=tSjL1Wk-XGoYHToh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -352,7 +352,7 @@
                                     <strong>Feb 2018
                                     </strong>
                                 </li>
-                                <li><strong> Theme from Witches' Dance </strong> Sunny auditioned for ensemble.
+                                <li><strong> Theme from Witches' Dance </strong> Sunny auditioned for an ensemble.
                                 </li>
                             </ul>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/xwB6QBJ1qh4?si=ppv3N-CXpNuMmGHh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -361,7 +361,7 @@
                                     <strong>Jun 2017
                                     </strong>
                                 </li>
-                                <li><strong> Gossec Gavotte </strong> Sunny's second voilin performance.
+                                <li><strong> Gossec Gavotte </strong> Sunny's second violin performance.
                                 </li>
                             </ul>	
 							<p>
@@ -388,7 +388,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <h2>Guzheng Performance</h2>
-                            <h4>The <a href="https://guzhengalive.com/guzheng-in-90-seconds">Guzheng</a> is a Chinese zither with 2500 years of history. Sunny started to learn Guzheng in since August 2022. </h4>
+                            <h4>The <a href="https://guzhengalive.com/guzheng-in-90-seconds">Guzheng</a> also know as the Chinese Zither has a 2500 year history. Sunny started to learn Guzheng since August 2022. </h4>
                             <hr class="star-primary">
                                <iframe width="560" height="315" src="https://www.youtube.com/embed/8KVh01Ofths?si=nOQWqvAB6lKt08X0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
                             <ul class="list-inline item-details">
@@ -396,7 +396,7 @@
                                     <strong>June 2023
                                     </strong>
                                 </li>
-                                <li><strong> The Fight with the Typhoon (战台风) </strong>  is a famous Guzheng solo piece, a dramatic depiction of fight of the Shanghai harbour proletariat against the forces of nature, while protecting the property of the people. Sunny performed it in the TCAAT Music Talent competition and won the 4th place.
+                                <li><strong> The Fight with the Typhoon (战台风) </strong>  is a famous Guzheng solo piece. It is a dramatic depiction of the fight of the Shanghai harbour against the forces of nature, while protecting the property of the people. Sunny performed it in the TCAAT Music Talent competition and won the 4th place.
                                 </li>
                             </ul>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/q4sxn4k4Dk0?si=BjlS9SlxrmOgHRiY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -405,7 +405,7 @@
                                     <strong>Dec 2023
                                     </strong>
                                 </li>
-                                <li><strong>Along the Yili River (伊犁河畔) </strong> Sunny performed this piece in the level 7/10 test and got the excellent pass.
+                                <li><strong>Along the Yili River (伊犁河畔) </strong> Sunny performed this piece in her level 7/10 test and passed with an excellent score of 92.
                                 </li>
                             </ul>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/vvQBiT6yid0?si=3ZocavlLc3-4Rs5i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -414,7 +414,7 @@
                                     <strong>Dec 2023
                                     </strong>
                                 </li>
-                                <li><strong>Harvest Drum (丰收锣鼓) </strong> Sunny performed this piece in the level 7/10 test and got the excellent pass.
+                                <li><strong>Harvest Drum (丰收锣鼓) </strong> Sunny performed this piece in the level 7/10 test and passed with an excellent score of 92.
                                 </li>
                             </ul>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/D4quo12nha8?si=JjI1ulbWMo1omtKb&amp;start=9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -423,7 +423,7 @@
                                     <strong>Feb 2023
                                     </strong>
                                 </li>
-                                <li><strong>Wild Geese Descending on the Sandbank (平沙落雁) / Song of Siton (丝桐颂) Busy Weaving (纺织忙)</strong> Sunny performed in the level 4/10 test and got the excellent pass. 
+                                <li><strong>Wild Geese Descending on the Sandbank (平沙落雁), Song of Siton (丝桐颂), and Busy Weaving (纺织忙)</strong> Sunny performed these pieces in her level 4/10 test and got an excellent score of 92. 
                                 </li>
                             </ul>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/SBhm4epAFmU?si=wlhNILf37ya_VDmW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -432,8 +432,7 @@
                                     <strong>May 2023
                                     </strong>
                                 </li>
-                                <li><strong>Harvest Drum (丰收锣鼓) </strong> Sunny (back row right 3) collaborated with her Guzheng instructor and fellow team members for a Mother's Day performance.
- xxWild Geese Descending on the Sandbank (平沙落雁) / Song of Siton (丝桐颂) Busy Weaving (纺织忙)</strong> Sunny performed in the level 4/10 test and got the excellent pass.
+                                <li><strong>Harvest Drum (丰收锣鼓) </strong> Sunny (back row right 3) collaborated with her Guzheng instructor and her other students for a Mother's Day performance.
                                 </li>
                             </ul>
 							<p>
@@ -576,7 +575,7 @@
                             <ul class="list-inline item-details">
                             <img src="images/musical2.jpg" class="img-responsive img-centered" alt="">
 							<li>
-									Sunny is positioned at the 6th right spot in the picture, with hands on her hat.
+									Sunny is positioned at the 6th right spot in the picture, with her hands on her hat.
                             </li>
 							</ul>
 							<ul class="list-inline item-details">
@@ -586,18 +585,12 @@
                                     Sunny is in red dress in the picture.
                             </li>
 							</ul>
-                            <ul class="list-inline item-details">
-                            <img src="images/musical1.jpg" class="img-responsive img-centered" alt="">
-                            <li>
-                                    Sunny is in red dress in the picture.
-                            </li>
-							</ul>
 							<img src="images/musical3.jpg" class="img-responsive img-centered" alt="">
                                 <li>
                                     <strong>
                                     Broadway Experience: Hello Dolly!
                                     </strong>
-                                    Sunny is positioned at the right spot in the above picture.
+                                    Sunny is positioned at the right spot in the picture above.
                                 </li>
                             </ul>
                             <ul class="list-inline item-details">
@@ -618,7 +611,7 @@
                                     <strong>
                                     Second Musical Experience: Happy Animals
                                     </strong>
-                                    Sunny is acting as the little mouse..
+                                    Sunny is acting as the little mouse.
                                 </li>
                             </ul>
                             <p>
@@ -766,7 +759,7 @@
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/-c4atGjYJ_Q?si=enxoCCHYnc_fu0Z7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 							<img src="images/host1.JPG" class="img-responsive img-centered" alt="">
                                 <li>
-                                    Besides an actor, Sunny took on the role of MC for the Chunhui Drama performance conducted in Chinese in 2022.
+                                    Besides besides being an actress, Sunny took on the role of MC for the Chunhui Drama performance conducted in Chinese in 2022.
                                 </li>
                            </ul>
                             <ul class="list-inline item-details">
@@ -774,7 +767,7 @@
                             <p>
                             <img src="images/vol3.JPG" class="img-responsive img-centered" alt="">
                             <li>
-                                    Sunny served as the MC in the senior performance shows 2018.
+                                    Sunny served as the MC for the performances in nursing homes 2018.
                             </li>
                             <p>
                             </ul>
@@ -783,7 +776,7 @@
 							<img src="images/sunny_mc2.JPG" class="img-responsive img-centered" alt="" width="560">
 							<iframe width="560" height="315" src="https://www.youtube.com/embed/UfdWqQUJLQE?si=UKnAyUUM2DUfC01b" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                 <li>
-                                    Sunny served as the MC during the Lunar New Year Celebration at school in 2019.
+                                    Sunny served as the MC during the Lunar New Year Celebration at her school in 2019.
                                 </li>
                            </ul>
 							<ul class="list-inline item-details">
@@ -875,7 +868,7 @@
                                 <li>
                                     <strong>Cupertino Senior Centers
                                     </strong>
-									Sunny served as both the MC and performer during each visit, making it a truly enjoyable experience for her.
+									Sunny served as both the MC and performer during each visit, making it a truly memorable experience for her.
                                 </li>
                             </ul>
 							<p>
