--- a/index.html
+++ b/index.html
@@ -715,9 +715,10 @@
                             <h2>Sunny's Recent Drawings</h2>
                             <hr class="star-primary">
 							<img src="images/hydro.jpg" class="img-responsive img-centered" alt="">
-							<li><strong> In submission of the Scholastic Art 7 Writing Awards: </strong>
+							<li><strong> In submission of the Scholastic Art & Writing Awards: </strong>
 							In the whirlwind of our swiftly moving world, have you ever paused to see the moments around you woven with beauty? Sometimes, upon closer inspection, you'll find it to be infinite. Beauty does not solely reside in the human form; it can manifest in the delicate snowflakes etching exquisite patterns upon the ground or in the ethereal embrace of fog casting a halo around a streetlight. For me, when looking around, beauty has unfurled in the form of sunlight's dance upon a water faucet. The cadence orchestrated by the sun upon the faucet possesses both fluidity and crisp delineations, akin to an artist coaxing melodies from an instrument, where the sun assumes the role of the maestro and the shadows, and droplets each become its own note, a shard, creating a harmony — nature’s concert — a sight people often take for granted. 
 							</li>
+							<br>
 							<img src="images/cup.jpg" class="img-responsive img-centered" alt="">
 							<img src="images/dog.jpg" class="img-responsive img-centered" alt="">
 							<img src="images/santa.jpg" class="img-responsive img-centered" alt="">
