--- a/index.html
+++ b/index.html
@@ -169,11 +169,13 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I'm a 8th grade student. I like Math, Science, Social Study and Reading.
+                    <p>I'm a 8th grade student. My favorite subjects are math, science, and social studies and I enjoy reading science fiction in my free time.
                       </p>
                 </div>
                 <div class="col-lg-4">
-                    <p> I like playing violin, Guzheng, basketball, musical, drawing, singing and dance.
+					<p>
+						I have enjoyed being in the spotlight and preforming for others since I was young. I believe that the arts are special in the way they can connect the artist and viewer without the need for words.
+
                       </p>
                 </div>
             </div>
